[package]
name = "mines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.10", features = ["svg", "tokio"]}
iced_native = "0.10"
iced_core = "0.10"
iced_aw = { version = "0.7"}

grid = "0.12"
rand = "0.8.5"
itertools = "0.12"

